# hildon-application-manager

./: .gitignore  ChangeLog  FUTURE  HACKING  INSTALL  Makefile.am  NEWS  PAST  README  TODO  UI  autogen.sh  com.nokia.hildon_application_manager.service  com.nokia.hildon_debian_package_ovi.service  configure.ac  ham-clean.sh  ham-killer.sh  ham-rescue.sh  hildon-application-manager.conf  hildon-application-manager.desktop  hildon-application-manager.sh  hildon-application-manager.sudoers  hildon-debian-package-ovi.desktop  make-package  osso-application-installer.desktop
catpo/: Makefile.am  README  da_DK.po  de_DE.po  en_GB.po  en_US.po  es_ES.po  es_MX.po  fi_FI.po  fr_CA.po  fr_FR.po  it_IT.po  nl_NL.po  no_NO.po  pt_BR.po  pt_PT.po  ru_RU.po  sv_SE.po
debian/: changelog  control  dirs  hildon-application-manager.init  hildon-application-manager.launcher  hildon-application-manager.xsession  postinst  preinst  prerm  rules
doc/: arch.txt  install.txt  packaging.txt  packpol-conf.txt  red-pill.txt  repository.txt  scripting.txt  temporary.txt
src/: Makefile.am  apt-utils.cc  apt-utils.h  apt-worker  apt-worker-bin.cc  apt-worker-client.cc  apt-worker-client.h  apt-worker-proto.cc  apt-worker-proto.h  apt-worker.cc  apt-worker.h  catalogues.cc  catalogues.h  confutils.cc  confutils.h  dbus.cc  dbus.h  details.cc  details.h  ham-after-boot.c  ham-long-label.c  ham-long-label.h  hildon-application-manager-config.cc  hildon-application-manager-merge-catalogues.cc  hildon-application-manager-util  hildon-fancy-button.c  hildon-fancy-button.h  hildon-update-notifier.desktop  instr.cc  instr.h  log.cc  log.h  main.cc  main.h  menu.cc  menu.h  mime-open.c  mime-server.c  modest-hbox-cell-renderer.c  modest-hbox-cell-renderer.h  (+24 more)
statusbar/: Makefile.am  ham-notifier-status-menu-item.c  ham-notifier-status-menu-item.h  ham-notifier-status-menu-item.sym  ham-notifier.c  ham-notifier.desktop  ham-notifier.h  ham-updates-status-menu-item.c  ham-updates-status-menu-item.h  ham-updates-status-menu-item.sym  ham-updates.c  ham-updates.desktop  ham-updates.h  hildon-update-notifier.desktop  hn-app-pixbuf-anim-blinker.c  hn-app-pixbuf-anim-blinker.h  transparent-icon.c  update-notifier-conf.h  update-notifier.c  update-notifier.h  util.c  util.h
utils/: Makefile.am  maemo-application-running.c  maemo-confirm-text  maemo-confirm-text-user.c  maemo-list-user-packages  maemo-select-menu-location  maemo-select-menu-location-main.c
